// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiIconTip is rendered 1`] = `
<span
  class="euiToolTipAnchor"
>
  <svg
    aria-label="aria-label"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="true"
    height="16"
    tabindex="0"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiIconTip props color is rendered as the icon color 1`] = `
<span
  class="euiToolTipAnchor"
>
  <svg
    aria-label="Info"
    class="euiIcon euiIcon--medium euiIcon--warning euiIcon-isLoading"
    focusable="true"
    height="16"
    tabindex="0"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiIconTip props size is rendered as the icon size 1`] = `
<span
  class="euiToolTipAnchor"
>
  <svg
    aria-label="Info"
    class="euiIcon euiIcon--xLarge euiIcon-isLoading"
    focusable="true"
    height="16"
    tabindex="0"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiIconTip props type is rendered as the icon 1`] = `
<span
  class="euiToolTipAnchor"
>
  <svg
    aria-label="Info"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="true"
    height="16"
    tabindex="0"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;
